<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="send_button">Send</string>
    <string name="Sending">Sending...</string>
    <string name="add_button">Add</string>
    <string name="bye">Bye Bye</string>
    <string name="call_button">Call Home</string>
    <string name="find_button">Find</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="birthday">Birthday :</string>
    <string name="register">Register</string>
    <string name="email">Email :</string>
</resources>
