<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yair.helloandroid.control.MainActivity">

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/send_button"
    android:id="@+id/send_button"
    android:layout_marginTop="67dp"
    android:onClick="setContentView"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/send_button">

        <Button
            android:text="Button"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_weight="1"
            android:layout_width="wrap_content" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_width="wrap_content" />

        <Button
            android:text="@string/find_button"
            android:layout_height="wrap_content"
            android:id="@+id/find_button"
            android:layout_weight="1"
            android:layout_width="wrap_content" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_button"
        android:id="@+id/call_Button"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/add_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:id="@+id/add_button"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/send_button"
        android:layout_alignParentStart="true" />

</RelativeLayout>
